Fix portfolio title visibility for mobile devices

--- a/src/components/Portfolio/PortfolioItem.scss
+++ b/src/components/Portfolio/PortfolioItem.scss
@@ -59,6 +59,7 @@
     }
     .folio__item__cell {
       left: 0;
+      opacity: 1;
     }
   }
 }
